--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-oauth/google": "^0.12.1",
+    "google-auth-library": "^9.15.1",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.488.0",
     "next": "15.1.6",
